tests/machine/x/cpp/outer_join.error
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:46:20: error: no match for ‘operator!=’ (operand types are ‘Order’ and ‘Order’)
   46 |     if ((row.order != Order{})) {
      |          ~~~~~~~~~ ^~ ~~~~~~~
      |              |        |
      |              Order    Order
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:47:25: error: no match for ‘operator!=’ (operand types are ‘Customer’ and ‘Customer’)
   47 |       if ((row.customer != Customer{})) {
      |            ~~~~~~~~~~~~ ^~ ~~~~~~~~~~
      |                |           |
      |                Customer    Customer
